libasteriskssl: Allow OpenSSL 1.0.2 configured with no-deprecated.

Use CRYPTO_set_id_callback(.) only with OpenSSL 0.9.8 and older.

ASTERISK-27867

Change-Id: Iadd58d5bf6f538eb224203970a4e88e26f259655